force-app/main/default/objects/fg_Mapping__mdt/fg_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>File Genie Mapping</label>
    <pluralLabel>File Genie Mappings</pluralLabel>
</CustomObject>