force-app/main/default/objects/fg_Mapping__mdt/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document Id</label>
    <length>19</length>
    <type>Text</type>
</CustomField>