force-app/main/default/objects/fg_Mapping__mdt/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Name of new file once generated</description>
    <inlineHelpText>Name of new file once generated</inlineHelpText>
    <label>File Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>