force-app/main/default/objects/fg_Mapping__mdt/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <label>Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>