force-app/main/default/objects/fg_Mapping__mdt/fields/Save_As__c.field-meta.xml
<CustomField>
    <fullName>Save_As__c</fullName>
    <defaultValue>&apos;Doc Type&apos;</defaultValue>
    <description>What file type should be returned once generated</description>
    <inlineHelpText>What file type should be returned once generated</inlineHelpText>
    <label>Save As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doc Type</fullName>
                <default>true</default>
                <label>Doc Type</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>