force-app/main/default/objects/fg_Mapping__mdt/fields/sObject_API__c.field-meta.xml
<CustomField>
    <fullName>sObject_API__c</fullName>
    <label>sObject API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>